--- a/templates/Financeiro/movimentacaoForm.html.twig
+++ b/templates/Financeiro/movimentacaoForm.html.twig
@@ -5,50 +5,101 @@
 
 {% block page_content %}
 
-<div class="card">
-	<div class="card-header">
+    <div class="card">
+        <div class="card-header">
 
-		<div class="row">
-			<div class="col-8">
-				<h3>Movimentação</h3>
-			</div>
-			<div class="col-4 text-right">
-				<button type="button" class="btn btn-secondary"
-					onclick="window.location.href='{{ url('fin_movimentacao_list') }}'">
-					<i class="fas fa-sync" aria-hidden="true"></i> Listar
-				</button>
-			</div>
-		</div>
+            <div class="row">
+                <div class="col-8">
+                    <h3>Movimentação</h3>
+                </div>
+                <div class="col-4 text-right">
+                    <button type="button" class="btn btn-secondary"
+                            onclick="window.location.href='{{ url('fin_movimentacao_list') }}'">
+                        <i class="fas fa-sync" aria-hidden="true"></i> Listar
+                    </button>
+                </div>
+            </div>
 
-	</div>
+        </div>
 
-	<div class="card-body">
+        <div class="card-body">
 
-		{% form_theme form 'bootstrap_4_horizontal_layout.html.twig' %}
+            {% form_theme form 'bootstrap_4_horizontal_layout.html.twig' %}
 
-		{{ form_start(form) }}
-		{{ form_widget(form) }}
+            {{ form_start(form) }}
 
-		<div class="row">
-			<div class="col text-right">
-				<button type="submit" class="btn btn-primary btn-lg" value="Salvar">
-					<i class="fas fa-save" aria-hidden="true"></i> Salvar
-				</button>
+            {{ form_row(form._token) }}
 
-				<button type="button" value="Resetar" class="btn btn-secondary"
-					data-url="{{ url('fin_movimentacao_form') }}"
-					data-target="#confirmationModal" data-toggle="modal">
-					<i class="fas fa-undo" aria-hidden="true"></i> Recarregar
-				</button>
-			</div>
-		</div>
+            {{ form_row(form.id) }}
+
+            {{ form_row(form.tipoLancto) }}
+            {{ form_row(form.carteira) }}
+
+            <div class="card" id="divCamposCheque" style="display: none;">
+                <h5 class="card-header">Cheque</h5>
+                <div class="card-body">
+                    {{ form_row(form.chequeBanco) }}
+                    {{ form_row(form.chequeAgencia) }}
+                    {{ form_row(form.chequeConta) }}
+                    {{ form_row(form.chequeNumCheque) }}
+                </div>
+            </div>
+
+            {{ form_row(form.modo) }}
+            {{ form_row(form.categoria) }}
+            {{ form_row(form.centroCusto) }}
+            {{ form_row(form.status) }}
+
+            {{ form_row(form.dtMoviment) }}
+            {{ form_row(form.dtVencto) }}
+            {{ form_row(form.dtVenctoEfetiva) }}
+            {{ form_row(form.dtPagto) }}
+            {{ form_row(form.dtUtil) }}
+
+            {{ form_row(form.pessoa) }}
+            {{ form_row(form.descricao) }}
 
 
-        {{ form_end(form, {'render_rest': false}) }}
+            <div class="card">
+                <h5 class="card-header">Documento</h5>
+                <div class="card-body">
+                    {{ form_row(form.documentoBanco) }}
+                    {{ form_row(form.documentoNum) }}
+                </div>
+            </div>
+
+            <div class="card">
+                <h5 class="card-header">Valores</h5>
+                <div class="card-body">
+                    {{ form_row(form.valor) }}
+                    {{ form_row(form.descontos) }}
+                    {{ form_row(form.acrescimos) }}
+                    {{ form_row(form.valorTotal) }}
+                </div>
+            </div>
+
+            {{ form_row(form.obs) }}
+
+            <div class="row">
+                <div class="col text-right">
+                    <button type="submit" class="btn btn-primary btn-lg" value="Salvar">
+                        <i class="fas fa-save" aria-hidden="true"></i> Salvar
+                    </button>
+
+                    <button type="button" value="Resetar" class="btn btn-secondary"
+                            data-url="{{ url('fin_movimentacao_form') }}"
+                            data-target="#confirmationModal" data-toggle="modal">
+                        <i class="fas fa-undo" aria-hidden="true"></i> Recarregar
+                    </button>
+                </div>
+            </div>
 
 
-	</div>
-</div>
+            {{ form_end(form, {'render_rest': false}) }}
+
+
+        </div>
+    </div>
 
 
 
@@ -58,5 +109,5 @@
 
 
 {% block down_scripts %}
-	<script src="{{ asset('build/fin/movimentacaoForm.js') }}"></script>
+    <script src="{{ asset('build/fin/movimentacaoForm.js') }}"></script>
 {% endblock %}
