--- a/templates/Config/mainmenu.html.twig
+++ b/templates/Config/mainmenu.html.twig
@@ -20,7 +20,7 @@
                             {% for filho in ent.filhos %}
                                 {% if filho.tipo == 'ENT' %}
                                     <li class="nav-item" style="{{ filho.cssStyle != null ? filho.cssStyle : '' }};">
-                                        <a class="nav-link" href="{{ filho.app.route ? url(filho.app.route) : '' }}">
+                                        <a class="nav-link" href="{{ filho.app.route and routeExists(filho.app.route) ? url(filho.app.route) : '' }}">
                                             <i class="nav-icon {{ filho.icon }}"></i>{{ filho.label }}</a></li>
                                 {% else %}
                                     <li class="nav-title">{{ filho.label }}</li>
