--- a/templates/Util/flashes.html.twig
+++ b/templates/Util/flashes.html.twig
@@ -1,6 +1,6 @@
 <div id="divFlashMessages">
 {% for flashMessage in app.flashes('success') %}
-<div class="FLASHMESSAGE FLASHMESSAGE_SUCCESS" style="display:none">{{ flashMessage }}</div>
+<div class="FLASHMESSAGE FLASHMESSAGE_SUCCESS" style="display:none">{{ flashMessage|raw }}</div>
 {% endfor %}
 
 {% for flashMessage in app.flashes('info') %}
@@ -11,7 +11,7 @@
 <div class="FLASHMESSAGE FLASHMESSAGE_ERROR" style="display:none">{{ flashMessage }}</div>
 {% endfor %}
 
-{% for flashMessage in app.flashes('warning') %}
+{% for flashMessage in app.flashes('warn') %}
 <div class="FLASHMESSAGE FLASHMESSAGE_WARNING" style="display:none">{{ flashMessage }}</div>
 {% endfor %}
 
