--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" type="image/png" href="{{ asset('images/favicon.png') }}"/>
 
+
+    <script src="{{ asset('build/static/pace.min.js') }}"></script>
+    <script>
+        Pace.on('start', function(e) {
+            document.getElementById('preloader').style.display = '';
+            document.getElementById('blurred').style.filter = 'blur(3px)';
+            //$('preloader');
+        });
+
+        Pace.on('hide', function(e) {
+            document.getElementById('preloader').style.display = 'none';
+            document.getElementById('blurred').style.filter = '';
+        });
+    </script>
+    <link href="{{ asset('build/static/pace-theme-loading-bar.css') }}" rel="stylesheet" />
+
     <title>{{ page_title is defined ? page_title ~ ' - Crosier v.0.0.1' : 'Crosier v.0.0.1' }} </title>
 
     {% block stylesheets %}
