--- a/templates/teste.html.twig
+++ b/templates/teste.html.twig
@@ -1,62 +1,60 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>My page</title>
-
-    <!-- CSS dependencies -->
-    <link rel="stylesheet" type="text/css" href="{{ asset('assets/bootstrap-3.3.7/css/bootstrap.min.css') }}">
-</head>
-<body>
-
-    <p>Content here. <a class="alert" href=#>Alert!</a></p>
+{% extends 'index.html.twig' %}
 
 
-<form action="{{ url('carteira_delete', {id: 1}) }}" method="post" data-confirmation="true" id="delete-form">
-						<input type="hidden" name="token" value="{{ csrf_token('delete') }}" />
-						<button type="submit" class="btn btn-lg btn-block btn-danger">
-							<i class="fa fa-trash" aria-hidden="true"></i> Deletar
-						</button>
-					</form>
 
-    <!-- JS dependencies -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="{{ asset('assets/bootstrap-3.3.7/js/bootstrap.min.js') }}"></script>
 
-    <!-- bootbox code -->
-    <script src="{{ asset('assets/bootbox/bootbox.min.js') }}"></script>
+{% block page_content %}
+
+
+    <button type="button" class="btn btn-secondary" id="btn">
+        <i class="fas fa-search" aria-hidden="true"></i> Pesquisar
+    </button>
+
+<form>
+    <button type="submit" class="btn btn-secondary" id="btnSubmit">
+        <i class="fas fa-search" aria-hidden="true"></i> submit
+    </button>
+</form>
+
+{% endblock %}
+
+
+{% block down_scripts %}
+
     <script>
-        $(document).on("click", ".alert", function(e) {
-            bootbox.alert("Hello world!", function() {
-                console.log("Alert Callback");
+
+    $(document).ready(function() {
+
+        $('#btn').on('click2', function(e) {
+            console.dir(e);
+
+            $.ajax({
+                url: Routing.generate('bse_pessoa_findByNome') + '/40392849032',
+                type: 'get',
+                dataType: 'json',
+                success: function (data) {
+                    $('input[id=cliente_nome]').val(data.nome);
+                    $('input[id=cliente_pessoa_id]').val(data.id);
+                    $('input[id=cliente_razao_social]').val(data.nome);
+                    $('input[id=cliente_nome_fantasia]').val(data.nomeFantasia);
+
+                    $('input[id=cliente_fone1]').val(data.fone1);
+                    $('input[id=cliente_email]').val(data.email);
+
+                    if (data.id) {
+                        $('.DADOSPESSOA').prop('disabled', true);
+                    }
+                }
             });
+
         });
 
 
-        $('form[data-confirmation]')
-		.on(
-				'submit',
-				function(e) {
-					e.preventDefault();
-					bootbox
-							.confirm({
-								title : "Destroy planet?",
-								message : "Do you want to activate the Deathstar now? This cannot be undone.",
-								buttons : {
-									cancel : {
-										label : '<i class="fa fa-times"></i> Cancel'
-									},
-									confirm : {
-										label : '<i class="fa fa-check"></i> Confirm'
-									}
-								},
-								callback : function(result) {
-									console
-											.log('This was logged in the callback: '
-													+ result);
-								}
-							})});
-        
-    </script>
-</body>
-</html>
+        $('#btn').on('click', function(e) {
+            Pace.restart();
+        });
+    });
+
+</script>
+
+{% endblock %}
