--- a/templates/Financeiro/movimentacaoFormTransfPropria.html.twig
+++ b/templates/Financeiro/movimentacaoFormTransfPropria.html.twig
@@ -25,14 +25,73 @@
 
             {{ form_start(form) }}
 
-            {% do form.centroCusto.setRendered() %}
-            {% do form.dtVencto.setRendered() %}
-            {% do form.dtVenctoEfetiva.setRendered() %}
-            {% do form.dtPagto.setRendered() %}
-            {% do form.dtUtil.setRendered() %}
-            {% do form.valorTotal.setRendered() %}
+            {{ form_row(form._token) }}
 
-            {{ form_widget(form) }}
+            {{ form_row(form.id) }}
+
+            {{ form_row(form.tipoLancto) }}
+            {{ form_row(form.carteira) }}
+
+            <div class="card" id="divCamposCheque" style="display: none;">
+                <h5 class="card-header">Cartão</h5>
+                <div class="card-body">
+                    {{ form_row(form.chequeBanco) }}
+                    {{ form_row(form.chequeAgencia) }}
+                    {{ form_row(form.chequeConta) }}
+                    {{ form_row(form.chequeNumCheque) }}
+                </div>
+            </div>
+
+            {{ form_row(form.modo) }}
+            {{ form_row(form.categoria) }}
+            {{ form_row(form.centroCusto) }}
+            {{ form_row(form.status) }}
+
+            {{ form_row(form.dtMoviment) }}
+            {{ form_row(form.dtVencto) }}
+            {{ form_row(form.dtVenctoEfetiva) }}
+            {{ form_row(form.dtPagto) }}
+            {{ form_row(form.dtUtil) }}
+
+            {{ form_row(form.pessoa) }}
+            {{ form_row(form.descricao) }}
+
+
+            <div class="card">
+                <h5 class="card-header">Documento</h5>
+                <div class="card-body">
+                    {{ form_row(form.documentoBanco) }}
+                    {{ form_row(form.documentoNum) }}
+                </div>
+            </div>
+
+            <div class="card">
+                <h5 class="card-header">Valores</h5>
+                <div class="card-body">
+                    {{ form_row(form.valor) }}
+                    {{ form_row(form.descontos) }}
+                    {{ form_row(form.acrescimos) }}
+                    {{ form_row(form.valorTotal) }}
+                </div>
+            </div>
+
+
+
+            <div class="card" id="divRecorrencia" style="display: {{ exibirRecorrente ? '' : 'none' }}">
+                <h5 class="card-header">Recorrência</h5>
+                <div class="card-body">
+                    {{ form_row(form.recorrente) }}
+
+                    <div id="camposRecorrente" style="display: none">
+                        {{ form_row(form.recorrDia) }}
+                        {{ form_row(form.recorrTipoRepet) }}
+                        {{ form_row(form.recorrFrequencia) }}
+                        {{ form_row(form.recorrVariacao) }}
+                    </div>
+                </div>
+            </div>
+
+            {{ form_row(form.obs) }}
 
             <div class="row">
                 <div class="col text-right">
@@ -50,6 +109,7 @@
 
 
             {{ form_end(form, {'render_rest': false}) }}
+
 
 
         </div>
