--- a/templates/Security/login.html.twig
+++ b/templates/Security/login.html.twig
@@ -4,9 +4,14 @@
 {% block body %}
 
 <body class="app flex-row align-items-center">
+
+<div id="preloader"
+	 style="display: none; position: fixed; left: 0; top: 0; z-index: 1999; width: 100%; height: 100%; overflow: visible; background:rgba(255,255,255,0.5);"></div>
+
+
 	<div class="container">
 		<div class="row justify-content-center">
-			<div class="col-md-8">
+			<div class="col-md-4">
 				<div class="card-group">
 					<div class="card p-4">
 						<div class="card-body">
@@ -63,19 +68,7 @@
 						</div>
 
 					</div>
-					<div class="card text-white bg-primary py-5 d-md-down-none"
-						style="width: 44%">
-						<div class="card-body text-center">
-							<div>
-								<h2>Sign up</h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-									sed do eiusmod tempor incididunt ut labore et dolore magna
-									aliqua.</p>
-								<button type="button" class="btn btn-primary active mt-3">Register
-									Now!</button>
-							</div>
-						</div>
-					</div>
+
 				</div>
 			</div>
 		</div>
