--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,4 +1,4 @@
-<footer class="app-footer">
+<footer class="app-footer blur-on-pace">
 <span class="text-left">
 <a href="https://coreui.io">CoreUI</a> &copy; 2017 creativeLabs.
 </span>
