--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -5,40 +5,41 @@
 
     <body class="app header-fixed sidebar-fixed aside-menu-fixed sidebar-lg-show">
 
-    <div id="preloader" style="display: none; position: fixed; left: 0; top: 0; z-index: 1999; width: 100%; height: 100%; overflow: visible; background:rgba(255,255,255,0.5); blur(8px);"></div>
-
-    <div id="blurred">
-
-    {{ include('header.html.twig') }}
-
-    <div class="app-body">
-
-        {{ render(controller('App\\Controller\\Config\\EntMenuController::getMainMenu')) }}
+    <div id="preloader"
+         style="display: none; position: fixed; left: 0; top: 0; z-index: 1999; width: 100%; height: 100%; overflow: visible; background:rgba(255,255,255,0.5);"></div>
 
 
-        <main class="main">
 
-            <div class="container-fluid" style="padding-top: 10px">
-                <div id="ui-view" style="opacity: 1;">
-                    <div class="animated fadeIn">
-                        {% block page_content %}
-                            {{ include('main.html.twig') }}
-                        {% endblock %}
+        {{ include('header.html.twig') }}
+
+        <div class="app-body blur-on-pace">
+
+            {{ render(controller('App\\Controller\\Config\\EntMenuController::getMainMenu')) }}
+
+
+            <main class="main">
+
+                <div class="container-fluid" style="padding-top: 10px">
+                    <div id="ui-view" style="opacity: 1;">
+                        <div class="animated fadeIn">
+                            {% block page_content %}
+                                {{ include('main.html.twig') }}
+                            {% endblock %}
+                        </div>
                     </div>
                 </div>
-            </div>
 
-        </main>
+            </main>
 
 
-    </div>
+        </div>
 
-    {{ include('Util/flashes.html.twig') }}
+        {{ include('Util/flashes.html.twig') }}
 
-    {{ include('Util/confirmationModal.html.twig') }}
+        {{ include('Util/confirmationModal.html.twig') }}
 
-    {{ include('footer.html.twig') }}
-    </div>
+        {{ include('footer.html.twig') }}
+
 
     </body>
 
