--- a/templates/Financeiro/movimentacaoCaixaList.html.twig
+++ b/templates/Financeiro/movimentacaoCaixaList.html.twig
@@ -24,7 +24,7 @@
                             </select>&nbsp;
 
                             <button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Novo registro"
-                                    onclick="window.location.href='{{ url('fin_movimentacao_formCaixa', {'carteira': filter.carteira}) }}'">
+                                    onclick="window.location.href='{{ url('fin_movimentacao_form', {'carteira': filter.carteira}) }}'">
                                 <i class="fas fa-file" aria-hidden="true"></i> Novo
                             </button>&nbsp;
 
